Experimentation/JorgeVsg/signal_hound_sdk/device_apis/sp_series/examples/csharp/sp_api.cs


    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetReference(int device, SpReference reference);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spGetReference(int device, ref SpReference reference);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetGPIOPort(int device, SpGPIOFunction func);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spGetGPIOPort(int device, ref SpGPIOFunction func);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetUARTBaudRate(int device, float rate);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spGetUARTBaudRate(int device, ref float rate);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spWriteUARTDirect(int device, byte data);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetGPSTimebaseUpdate(int device, SpBool enabled);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spGetGPSTimebaseUpdate(int device, ref SpBool enabled);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spGetGPSHoldoverInfo(int device, ref SpBool usingGPSHoldover, ref uint lastHoldoverTime);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spGetGPSState(int device, ref SpGPSState GPSState);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetRefLevel(int device, double refLevel);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spGetRefLevel(int device, ref double refLevel);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetAttenuator(int device, int atten);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spGetAttenuator(int device, ref int atten);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetSweepCenterSpan(int device, double centerFreqHz, double spanHz);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetSweepStartStop(int device, double startFreqHz, double stopFreqHz);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetSweepCoupling(int device, double rbw, double vbw, double sweepTime);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetSweepDetector(int device, SpDetector detector, SpVideoUnits videoUnits);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetSweepScale(int device, SpScale scale);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetSweepWindow(int device, SpWindowType window);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetSweepGPIOSwitching(int device, double[] freqs, byte[] data, int count);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetSweepGPIOSwitchingDisabled(int device);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetRealTimeCenterSpan(int device, double centerFreqHz, double spanHz);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetRealTimeRBW(int device, double rbw);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetRealTimeDetector(int device, SpDetector detector);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetRealTimeScale(int device, SpScale scale, double frameRef, double frameScale);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetRealTimeWindow(int device, SpWindowType window);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetIQDataType(int device, SpDataType dataType);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetIQCenterFreq(int device, double centerFreqHz);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spGetIQCenterFreq(int device, ref double centerFreqHz);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetIQSampleRate(int device, int decimation);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetIQSoftwareFilter(int device, SpBool enabled);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetIQBandwidth(int device, double bandwidth);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetIQExtTriggerEdge(int device, SpTriggerEdge edge);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetIQTriggerSentinel(double sentinelValue);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetIQQueueSize(int device, int units);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetIQSweepListDataType(int device, SpDataType dataType);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetIQSweepListCorrected(int device, SpBool corrected);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetIQSweepListSteps(int device, int steps);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spGetIQSweepListSteps(int device, ref int steps);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetIQSweepListFreq(int device, int step, double freq);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetIQSweepListRef(int device, int step, double level);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetIQSweepListAtten(int device, int step, int atten);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetIQSweepListSampleCount(int device, int step, uint samples);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetAudioCenterFreq(int device, double centerFreqHz);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetAudioType(int device, SpAudioType audioType);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetAudioFilters(int device,
                                                    double ifBandwidth,
                                                    double audioLpf,
                                                    double audioHpf);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spSetAudioFMDeemphasis(int device, double deemphasis);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spConfigure(int device, SpMode mode);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spGetCurrentMode(int device, ref SpMode mode);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spAbort(int device);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spGetSweepParameters(int device, ref double actualRBW, ref double actualVBW,
                                                       ref double actualStartFreq, ref double binSize, ref int sweepSize);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spGetRealTimeParameters(int device, ref double actualRBW, ref int sweepSize, ref double actualStartFreq,
                                                          ref double binSize, ref int frameWidth, ref int frameHeight, ref double poi);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spGetIQParameters(int device, ref double sampleRate, ref double bandwidth);


    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spGetIQCorrection(int device, ref float scale);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spIQSweepListGetCorrections(int device, float[] corrections);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spGetSweep(int device, float[] sweepMin, float[] sweepMax, ref long nsSinceEpoch);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spGetRealTimeFrame(int device, float[] colorFrame, float[] alphaFrame, float[] sweepMin,
                                                     float[] sweepMax, ref int frameCount, ref long nsSinceEpoch);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spGetIQ(int device, float[] iqBuf, int iqBufSize, double[] triggers, int triggerBufSize,
                                          ref long nsSinceEpoch, SpBool purge, ref int sampleLoss, ref int samplesRemaining);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spIQSweepListGetSweep(int device, float[] dst, long[] timestamps);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spIQSweepListStartSweep(int device, int pos, float[] dst, long[] timestamps);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spIQSweepListFinishSweep(int device, int pos);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spGetAudio(int device, float[] audio);

    [DllImport("sp_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SpStatus spGetGPSInfo(int device, SpBool refresh, ref SpBool updated, ref long secSinceEpoch,
                                               ref double latitude, ref double longitude, ref double altitude, char[] nmea, ref int nmeaLen);
